電源投入時処理を追加

--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -142,10 +142,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Cartridge.cpp" />
+    <ClCompile Include="src\CPU6502.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Cartridge.hpp" />
+    <ClInclude Include="src\CPU6502.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
