--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -144,11 +144,13 @@
     <ClCompile Include="src\Cartridge.cpp" />
     <ClCompile Include="src\CPU6502.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MainBuss.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Cartridge.hpp" />
     <ClInclude Include="src\CPU6502.hpp" />
     <ClInclude Include="src\DefStatusRegister.hpp" />
+    <ClInclude Include="src\MainBuss.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
