--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClCompile Include="src\Cartridge.cpp" />
     <ClCompile Include="src\CPU6502.cpp" />
+    <ClCompile Include="src\LamNES.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MainBuss.cpp" />
   </ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="src\Cartridge.hpp" />
     <ClInclude Include="src\CPU6502.hpp" />
     <ClInclude Include="src\DefStatusRegister.hpp" />
+    <ClInclude Include="src\LamNES.hpp" />
     <ClInclude Include="src\MainBuss.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
