PPUの電源投入時，リセット時の処理を追加

--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MainBuss.cpp" />
     <ClCompile Include="src\PPU.cpp" />
+    <ClCompile Include="src\VRAM.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Cartridge.hpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="src\LamNES.hpp" />
     <ClInclude Include="src\MainBuss.hpp" />
     <ClInclude Include="src\PPU.hpp" />
+    <ClInclude Include="src\VRAM.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
