--- a/emulator/emulator.vcxproj
+++ b/emulator/emulator.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MainBuss.cpp" />
     <ClCompile Include="src\PPU.cpp" />
+    <ClCompile Include="src\VirtualScreen.cpp" />
     <ClCompile Include="src\VRAM.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="src\LamNES.hpp" />
     <ClInclude Include="src\MainBuss.hpp" />
     <ClInclude Include="src\PPU.hpp" />
+    <ClInclude Include="src\VirtualScreen.hpp" />
     <ClInclude Include="src\VRAM.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
